package edu.advising.audit;

public enum EventType {
    LOGIN,
    LOGOUT,
    LOGIN_FAILED,
    ACCOUNT_LOCKED,
    COMMAND_EXECUTED,
    COMMAND_UNDONE,
    PIPELINE_RESULT,
    REPORT_GENERATED
}
